# servant-prototype

./: Dockerfile  LICENSE  Main.hs  Procfile  cabal-bootstrap  cabal.config  servant-tutorial.cabal
src/: App.hs
