name:                servant-tutorial
version:             0.1.0.0
synopsis:            Checking out the servant tutorial...
-- description:
license:             MIT
license-file:        LICENSE
author:              Chance Snow
maintainer:          git@chancesnow.me
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
  other-modules:       Models.User
  build-depends:       base >=4.8 && <4.9,
                       string-conversions,
                       time,
                       text,
                       servant-server,
                       http-api-data,
                       aeson,
                       wai,
                       warp
  ghc-options:         -Wall
  default-language:    Haskell2010

executable servant-tutorial
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9,
                       servant-tutorial
  default-language:    Haskell2010
